<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:id="@+id/form"
    tools:context=".ui.meeting_list.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/reu"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/meeting_topic"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/meeting_room"
        android:layout_marginBottom="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Sujet de la réunion"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/meeting_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>




    <EditText
        android:id="@+id/member"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Liste des participants"
        android:layout_marginBottom="20dp"
        android:layout_alignBottom="@+id/rel"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/in_date"
            android:background="#11000000"
            android:layout_weight="1"
            android:layout_alignParentTop="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="SELECT DATE"
            android:id="@+id/btn_date"
            android:layout_alignBottom="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:layout_toEndOf="@+id/in_date" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/in_time"
            android:layout_weight="1"
            android:background="#11000000"
            android:layout_below="@+id/in_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="SELECT TIME"
            android:id="@+id/btn_time"
            android:layout_below="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/envoie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valider"
            android:layout_weight="0.5"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp" />
        <Button
            android:id="@+id/annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Annuler"
            android:layout_weight="0.5"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp" />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>
   
    </LinearLayout>