<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layout_spinner_filter">

    <Spinner
        android:id="@+id/spinner_choice"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Theme.AppCompat.DayNight"/>

</LinearLayout>